shows blank spaces for the answers amount of letters

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 		<button type="button" id='try'>Guess</button>
 	</div>
 
+
+	<div id='blankAnswer'></div>
+
 	<div id='result'></div>
 <script type="text/javascript" src="script.js"></script>
 </body>
