letters guess are now stored but it is showing multiple values for the guess because it is going through the loop the length of the word

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 
 	<div id='blankAnswer'></div>
+	<div id='letterGuessed'></div>
 
 	<div id='result'></div>
 <script type="text/javascript" src="script.js"></script>
