--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<h1>What type of pet do I have?</h1>
+<h1>Hangman</h1>
 	<div id="game">
 		<input type="text" id="playerGuess" placeholder="Guess a letter!">
 		<button type="button" id='try'>Guess</button>
