--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 	</div>
 
 
-	<div id='blankAnswer'></div>
-	<div id='letterGuessed'></div>
+	<div id = 'blankAnswer'></div>
+	<div id = 'letterGuessed'></div>
+	
+	<button type = 'button' id = 'hint' >Hint!</button>
 
 	<div id='result'></div>
 <script type="text/javascript" src="script.js"></script>
