hints are now displayed in div below the hint button

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<div id = 'letterGuessed'></div>
 	
 	<button type = 'button' id = 'hint' >Hint!</button>
+	<div id='displayHint'></div>
 
 	<div id='result'></div>
 <script type="text/javascript" src="script.js"></script>
