button on game to reset funtional

--- a/index.html
+++ b/index.html
@@ -18,9 +18,12 @@
 	<div id = 'letterGuessed'></div>
 	
 	<button type = 'button' id = 'hint' >Hint!</button>
-	<div id='displayHint'></div>
+	<div id = 'displayHint'></div>
+
+	<button id = 'reset'>Start Over!</button>
 
 	<div id='result'></div>
+	
 <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
