castle image and text added

--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
 </head>
 
 <body>
-<h1>Hangman</h1>
+
+	<div class = 'castle'>
+		<img id = "castlePic" src="img/castle.jpg">
+			<div class="centered" id='text-block'>
+				<p>HANGMAN</p>
+				<p> TIS THE GAME OF OUR KING! <br> CORRECTLY SPELL THE WORD IN 5 LIVES AND AVOID THE PIT OF MISERY! <br>DILLY DILLY!</p>
+			</div>
+		</img>
+	</div>
+
 	<div id="game">
 		<input type="text" id="playerGuess" placeholder="Guess a letter!">
 		<button type="button" id='try'>Guess</button>
