pushed the submissions into the div of the main image

--- a/index.html
+++ b/index.html
@@ -13,24 +13,20 @@
 			<div class="centered" id='text-block'>
 				<p>HANGMAN</p>
 				<p> TIS THE GAME OF OUR KING! <br> CORRECTLY SPELL THE WORD IN 5 LIVES AND AVOID THE PIT OF MISERY! <br>DILLY DILLY!</p>
+				<input type="text" class = 'content' id="playerGuess" placeholder="Guess a letter!">
+				<button type="button" class = 'content' id='try'>Guess		</button>
+				<div class='content' id = 'blankAnswer'></div>
+				<div class = 'content' id = 'letterGuessed'></div>
+				<div class = 'content' id = 'displayLives'></div>
+				<button type = 'button' id = 'hint' >Hint!</button>
+				<div class = 'content' id = 'displayHint'></div>
+				<button class = 'content' id = 'reset'>Start Over!</button>
+				<div class = 'content' id='result'></div>
 			</div>
 		</img>
 	</div>
 
-	<div id="game">
-		<input type="text" id="playerGuess" placeholder="Guess a letter!">
-		<button type="button" id='try'>Guess</button>
-	</div>
 
-
-	<div id = 'blankAnswer'></div>
-	<div id = 'letterGuessed'></div>
-	<div id = 'displayLives'></div>
-	<button type = 'button' id = 'hint' >Hint!</button>
-	<div id = 'displayHint'></div>
-	<button id = 'reset'>Start Over!</button>
-
-	<div id='result'></div>
 
 <script type="text/javascript" src="script.js"></script>
 </body>
